# slucto

./: CMakeLists.txt  Makefile  README  slucto  slucto_cli  slucto_create
faktura/: Makefile  faktura.tex
frontend/: CMakeLists.txt  frontend.pro  itemmodel.cpp  itemmodel.h  main.cpp  newinvoice.cpp  newinvoice.h  newinvoice.ui  picker.cpp  picker.h  picker.ui  printinvoice.cpp  printinvoice.h  printinvoice.ui  slucto.cpp  slucto.h  slucto.ui
